# Zscaler

./: .env-sample  .gitignore  README.md  admin.py  auth.py  createUrlFilteringRules.py  getApiSession.py  lookupUrlClassification.py  main.py  pyproject.toml  settings.py  url_categories.py  url_filtering_rules.py  zia.py
