[tool.poetry]
name = "zscaler-sdk"
version = "0.1.0"
description = ""
authors = ["yuta519 <yuta519.ka23tf@docomo.ne.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
black = "^21.8b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
